.config/waybar/style.css
@define-color base #1e1e2e;
@define-color mantle #181825;
@define-color crust #11111b;

@define-color text #cdd6f4;
@define-color subtext0 #a6adc8;
@define-color subtext1 #bac2de;

@define-color surface0 #313244;
@define-color surface1 #45475a;
@define-color surface2 #585b70;

@define-color overlay0 #6c7086;
@define-color overlay1 #7f849c;
@define-color overlay2 #9399b2;

@define-color blue #89b4fa;
@define-color lavender #b4befe;
@define-color sapphire #74c7ec;
@define-color sky #89dceb;
@define-color teal #94e2d5;
@define-color green #a6e3a1;
@define-color yellow #f9e2af;
@define-color peach #fab387;
@define-color maroon #eba0ac;
@define-color red #f38ba8;
@define-color mauve #cba6f7;
@define-color pink #f5c2e7;
@define-color flamingo #f2cdcd;
@define-color rosewater #f5e0dc;

* {
  font-family:
    "JetBrainsMono NF",
    "Symbols Nerd Font";
  font-weight: bolder;
  font-size: 14px;
}

window#waybar {
  background-color: transparent;
  color: @sapphire;
  transition-property: background-color;
  transition-duration: 0.5s;
}

window#waybar.hidden {
  opacity: 0.2;
}

/*
window#waybar.empty {
    background-color: transparent;
}
window#waybar.solo {
    background-color: #FFFFFF;
}
*/

window#waybar.termite {
  background-color: #3f3f3f;
}

window#waybar.chromium {
  background-color: #000000;
  border: none;
}

button {
  /* Use box-shadow instead of border so the text isn't offset */
  box-shadow: inset 0 -3px transparent;
  /* Avoid rounded borders under each button name */
  border: none;
  border-radius: 0;
}

/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */

#workspaces button:hover {
  color: @blue;
  box-shadow: inherit;
  text-shadow: inherit;
  background: @crust;
  border: @crust;
}

#workspaces button {
  padding: 0 5px;
  color: @surface2;
  margin: 4px 0 4px 0;
  transition: color 200ms ease-in-out;
}

#workspaces button.selected {
  color: @blue;
}

#workspaces button.active {
  color: @mauve;
}

#workspaces button.urgent {
  color: @red;
}

#image {
  margin: 4px 0 4px 10px;
}

#clock,
#battery,
#cpu,
#memory,
#disk,
#temperature,
#backlight,
#network,
#wireplumber,
#custom-pacman,
#custom-power,
#tray,
#mode,
#idle_inhibitor,
#scratchpad,
#mpd {
  padding: 0 6px;
  color: @text;
  border-radius: 15px;
  margin: 5px 0;
}

#pulseaudio {
  padding: 0 10px;
  color: @text;
  border-radius: 15px;
  margin: 5px 0;
}

#window,
#workspaces {
  margin: 0 4px;
}

/* If workspaces is the leftmost module, reduce left margin */
.modules-left>widget:first-child>#workspaces {
  margin-left: 2px;
}

#clock {
  color: @text;
}

#custom-pacman {
  color: @peach;
}

#pulseaudio {
  color: @mauve;
}

#pulseaudio.muted {
  color: @surface2;
}

#network {
  color: @blue;
}

#network.disconnected {
  color: @surface2;
}

#battery {
  color: @green;
}

#battery.warning:not(.charging) {
  color: @red;
}

#custom-power {
  color: @maroon;
}

#bluetooth {
  margin-right: 10px;
  font-size: 17px;
  color: white;
}

#keyboard-state>label {
  padding: 0 5px;
}

#keyboard-state>label.locked {
  background: rgba(0, 0, 0, 0.2);
}

#scratchpad {
  background: rgba(0, 0, 0, 0.2);
}

#scratchpad.empty {
  background-color: transparent;
}

.modules-left {
  background-color: @crust;
  border-radius: 10px;
  padding-right: 10px;
  margin: 5px 0 0 10px;
}

.modules-center {
  background-color: @crust;
  border-radius: 10px;
  padding: 0 10px;
  margin-top: 5px;
  border: solid cyan 2px;
}

.modules-right {
  background-color: @crust;
  border-radius: 10px;
  padding: 0 10px;
  margin: 5px 10px 0 0;
}

#custom-spotify {
  color: #6fcf97;
  padding-right: 10px;
}

#custom-notification {
  color: white;
  padding-right: 10px;
}

/* vim: ft=sass */

